Testing href fix

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta chapter="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<base href="/">
+		<base href="./">
 
 		<title>Pyramids</title>
 
@@ -29,11 +29,11 @@
 		<div class="container">
 			<nav class="navbar">
 				<div class="navbar-header">
-					<a href="/create" class="navbar-brand">Create</a>
+					<a href="./create" class="navbar-brand">Create</a>
 				</div>
 
 				<ul class="nav navbar-nav">
-					<li><a href="/pyramids">Pyramids</a></li>
+					<li><a href="./pyramids">Pyramids</a></li>
 				</ul>
 			</nav>
 
