changed routes to fit gh-pages

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 		<div class="container">
 			<nav class="navbar">
 				<div class="navbar-header">
-					<a href="./create" class="navbar-brand">Create</a>
+					<a href="/pyramid/create" class="navbar-brand">Create</a>
 				</div>
 
 				<ul class="nav navbar-nav">
-					<li><a href="./pyramids">Pyramids</a></li>
+					<li><a href="/pyramid/pyramids">Pyramids</a></li>
 				</ul>
 			</nav>
 
