--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 		<title>Pyramids</title>
 
 		<!-- SCROLLS -->
-		<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="public/libs/bootstrap/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="public/css/style.css">
 
 		<!-- SPELLS -->
-		<script src="libs/angular/angular.min.js" charset="utf-8"></script>
-		<script src="libs/angular-route/angular-route.min.js" charset="utf-8"></script>
-		<script src="libs/jquery/dist/jquery.min.js" charset="utf-8"></script>
-		<script src="libs/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
+		<script src="public/libs/angular/angular.min.js" charset="utf-8"></script>
+		<script src="public/libs/angular-route/angular-route.min.js" charset="utf-8"></script>
+		<script src="public/libs/jquery/dist/jquery.min.js" charset="utf-8"></script>
+		<script src="public/libs/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
 
 		<!-- ANGULAR -->
-		<script src="js/controllers/EditCtrl.js"></script>
-	    <script src="js/controllers/PyrCtrl.js"></script>
-	    <script src="js/services/PyramidService.js"></script>
-	    <script src="js/appRoutes.js"></script>
-	    <script src="js/app.js"></script>
+		<script src="public/js/controllers/EditCtrl.js"></script>
+	    <script src="public/js/controllers/PyrCtrl.js"></script>
+	    <script src="public/js/services/PyramidService.js"></script>
+	    <script src="public/js/appRoutes.js"></script>
+	    <script src="public/js/app.js"></script>
 	</head>
 	<body ng-app="PyramidApp">
 		<div class="container">
