--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
 		<!-- SCROLLS -->
 		<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="css/style.css">
 
 		<!-- SPELLS -->
 		<script src="libs/angular/angular.min.js" charset="utf-8"></script>
