--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,12 @@
 		<div class="container">
 			<nav class="navbar">
 				<div class="navbar-header">
-					<a href="/create" class="navbar-brand">Create</a>
+					<a href="/" class="navbar-brand">Home</a>
 				</div>
 
 				<ul class="nav navbar-nav">
 					<li><a href="/pyramids">Pyramids</a></li>
+					<li><a href="/create"><span class="glyphicon glyphicon-plus"></span> Create</a></li>
 				</ul>
 			</nav>
 
