--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 		<script src="libs/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
 
 		<!-- ANGULAR -->
-		<script src="js/controllers/EditCtrl.js"></script>
+		<script src="js/controllers/CreateCtrl.js"></script>
 	    <script src="js/controllers/PyrCtrl.js"></script>
 	    <script src="js/services/PyramidService.js"></script>
 	    <script src="js/appRoutes.js"></script>
