--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,19 @@
 		<title>Pyramids</title>
 
 		<!-- SCROLLS -->
-		<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
+		<link rel="stylesheet" href="libs/angular-material/angular-material.min.css">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<link href="libs/angular-material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/style.css">
 
 		<!-- SPELLS -->
 		<script src="libs/angular/angular.min.js" charset="utf-8"></script>
 		<script src="libs/angular-route/angular-route.min.js" charset="utf-8"></script>
+		<script src="libs/angular-material/angular-material.min.js"></script>
+		<script src="libs/angular-animate/angular-animate.min.js"></script>
+		<script src="libs/angular-aria/angular-aria.min.js"></script>
+		<script src="libs/angular-messages/angular-messages.min.js"></script>
+		
 		<script src="libs/jquery/dist/jquery.min.js" charset="utf-8"></script>
 		<script src="libs/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
 
@@ -26,20 +33,21 @@
 	    <script src="js/app.js"></script>
 	</head>
 	<body ng-app="PyramidApp">
-		<div class="container">
-			<nav class="navbar">
-				<div class="navbar-header">
-					<a href="/" class="navbar-brand">Home</a>
-				</div>
+		<md-content class="md-padding">
+			<md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="Pages">
 
-				<ul class="nav navbar-nav">
-					<li><a href="/pyramids">Pyramids</a></li>
-					<li><a href="/create"><span class="glyphicon glyphicon-plus"></span> Create</a></li>
-				</ul>
-			</nav>
+				<md-nav-item md-nav-href="/" name="home">
+					<span class="material-icons">&#xE88A;</span> Home
+				</md-nav-item>
 
+				<md-nav-item md-nav-href="/create" name="create">
+					<span class="material-icons">&#xE147;</span> Create
+				</md-nav-item>
+				<md-nav-item md-nav-href="/pyramids" name="pyramids">
+					<span class="material-icons">&#xE86B;</span> Pyramids
+				</md-nav-item>
+			</md-nav-bar>
 			<div ng-view></div>
-
-		</div>
+		</md-content>
 	</body>
 </html>
