--- a/public/index.html
+++ b/public/index.html
@@ -25,15 +25,17 @@
 		<script src="libs/angular-material-data-table/dist/md-data-table.min.js"></script>
 		
 		<script src="libs/jquery/dist/jquery.min.js" charset="utf-8"></script>
+		<script src="libs/underscore.min.js" charset="utf-8"></script>
 		
 		<!-- ANGULAR -->
-		<script src="js/controllers/CreateCtrl.js"></script>
-	    <script src="js/controllers/PyrCtrl.js"></script>
+		<script src="js/controllers/IndexController.js"></script>
+		<script src="js/controllers/CreateController.js"></script>
+	    <script src="js/controllers/ListController.js"></script>
 	    <script src="js/services/PyramidService.js"></script>
 	    <script src="js/appRoutes.js"></script>
 	    <script src="js/app.js"></script>
 	</head>
-	<body ng-app="PyramidApp">
+	<body ng-app="PyramidApp" ng-controller="IndexController">
 		<div layout="column" layout-fill>
 			<header>
 				<md-toolbar md-scroll-shrink>
@@ -46,16 +48,14 @@
 			<md-content layout-padding flex>
 			<main flex>
 				<md-nav-bar md-selected-nav-item="currentNavItem" nav-bar-aria-label="Pages">
-
 					<md-nav-item md-nav-href="/" name="home">
-						<span class="material-icons">&#xE88A;</span> Home
+						<md-icon>home</md-icon> Home
 					</md-nav-item>
-
 					<md-nav-item md-nav-href="/create" name="create">
-						<span class="material-icons">&#xE147;</span> Create
+						<md-icon>add_circle</md-icon> Create
 					</md-nav-item>
 					<md-nav-item md-nav-href="/pyramids" name="pyramids">
-						<span class="material-icons">&#xE86B;</span> Pyramids
+						<md-icon>view_list</md-icon> Pyramids
 					</md-nav-item>
 				</md-nav-bar>
 				
