--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
 		<script src="js/controllers/IndexController.js"></script>
 		<script src="js/controllers/CreateController.js"></script>
 	    <script src="js/controllers/ListController.js"></script>
+	    <script src="js/controllers/ViewDialogController.js"></script>
+	    <script src="js/controllers/EditDialogController.js"></script>
 	    <script src="js/services/PyramidService.js"></script>
 	    <script src="js/appRoutes.js"></script>
 	    <script src="js/app.js"></script>
